@@ -18,9 +18,9 @@ public class StringCalculator {
             }
         }
 
-        List<String> arraysOfNumbers = Arrays.stream(input)
+        List<String> numbersAsString = Arrays.stream(input)
                 .map(arrayOfStrings -> {
-                    List<String> delimiters = Arrays.asList(",");
+                    List<String> delimiters = List.of(",");
                     if (arrayOfStrings.startsWith("//")) {
                         int newLineIndex = arrayOfStrings.indexOf("\n");
                         String delimitersString = arrayOfStrings.substring(2, newLineIndex);
@@ -30,15 +30,15 @@ public class StringCalculator {
                     String delimiterRegexp = getDelimiterRegexp(delimiters);
                     return Arrays.asList(arrayOfStrings.replaceAll("\\s", "").split(delimiterRegexp));
                 })
-                .flatMap(Collection::stream).collect(Collectors.toList());
-        int sum = arraysOfNumbers.stream().mapToInt(Integer::parseInt).filter(value -> {return value < 1001;}).sum();
-        arraysOfNumbers.forEach(value -> {
+                .flatMap(Collection::stream).toList();
+        int sum = numbersAsString.stream().mapToInt(Integer::parseInt).filter(value -> value < 1001).sum();
+        numbersAsString.forEach(value -> {
             int anInt = Integer.parseInt(value);
             if ( anInt < 0 ) {
                 negativeNumbers.add(anInt);
             }
         });
-        if (negativeNumbers.size() > 0) {
+        if ( ! negativeNumbers.isEmpty()) {
             throw new RuntimeException("Negatives not allowed: " + negativeNumbers);
         }
         return sum;
@@ -52,7 +52,7 @@ public class StringCalculator {
     }
 
     List<String> getDelimiters(String delimitersString) {
-        List<String> list = Arrays.asList(delimitersString);
+        List<String> list = List.of(delimitersString);
         if (delimitersString.startsWith("[") && delimitersString.endsWith("]")) {
             delimitersString = delimitersString.substring(1, delimitersString.length()-1);
             list = Arrays.asList(delimitersString.split("]\\["));
